@@ -50,3 +50,7 @@
 2012-08-30  Carsten Haitzler (The Rasterman)
 
         1.7.0 release
+
+2012-09-06  Sohyun Kim
+
+	* Add capsfilter to limit format and size for fimc on device.
